update controller, start view

--- a/app/views/physicians/index.html.erb
+++ b/app/views/physicians/index.html.erb
@@ -1,32 +1,15 @@
 <h1>Physician's Appointments</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Notable</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h3 class="card-title">Notable</h3>
+    <h5>Physicians</h5>
+    <ul class="list-group py-2">
+    <% @physicians.each do |p| %>
+      <a href=<%="physicians/#{p.id}/appointments"%>><li class="list-group-item"><%=  p.display_name %></li></a>
+   <% end %>i
+    </ul>
+    <a href="#" class="btn btn-primary">Logout</a>
+  </div>
+</div>
